position & color lang switch; "next interview" linebreaks

--- a/src/partials/interview.html
+++ b/src/partials/interview.html
@@ -31,17 +31,14 @@
 </div>
 
 <div class="mb-16 mt-12 flex items-center justify-between sm:-mx-[2rem] md:-mx-[4rem] lg:-mx-[7rem] xl:-mx-[12rem]">
-    <a class="text-center font-crimson-text tracking-tight text-gray-100 hover:!text-white" href="{{prevLink}}">
-        <div data-lang-key="interview-prev" class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4">
-            vorheriges Interview
-        </div>
-    </a>
-    <a class="text-center font-crimson-text tracking-tight text-gray-100 hover:!text-white" href="{{nextLink}}">
-        <div
-            data-lang-key="interview-next"
-            class="flex h-32 w-32 items-center justify-between rounded-full bg-gray-950 p-4 hover:!text-white"
+    <a class="whitespace-pre-line text-center font-crimson-text tracking-tight text-gray-100 hover:!text-white" href="{{prevLink}}">
+        <span data-lang-key="interview-prev" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+            >vorheriges&#10;Interview</span
         >
-            nächstes Interview
-        </div>
+    </a>
+    <a class="whitespace-pre-line text-center font-crimson-text tracking-tight text-gray-100 hover:!text-white" href="{{nextLink}}">
+        <span data-lang-key="interview-next" class="flex size-32 items-center justify-center rounded-full bg-gray-950 p-4"
+            >nächstes&#10;Interview</span
+        >
     </a>
 </div>
