--- a/src/partials/interview_audio.html
+++ b/src/partials/interview_audio.html
@@ -4,6 +4,6 @@
         Your system can't play audio, it seems!
     </audio>
     <div class="-mb-2 w-full pt-2 text-center font-crimson-text text-base font-medium italic tracking-wide text-gray-300">
-        <span data-lang-key="{{ id }}-audio-title">{{ title && title }}</span> | {{author && author}}
+        <span data-lang-key="{{ id ? id : 'no_id'}}-audio-title">{{title && title}}</span>{{author && " | " + author}}
     </div>
 </div>
