testing transcription link

--- a/src/partials/interview_audio.html
+++ b/src/partials/interview_audio.html
@@ -5,5 +5,6 @@
     </audio>
     <div class="-mb-2 w-full pt-2 text-center font-crimson-text text-base font-medium italic tracking-wide text-gray-300">
         <span data-lang-key="{{ id ? id : 'no_id'}}-audio-title">{{title && title}}</span>{{author && " | " + author}}
+        <span>Open Transcript</span>
     </div>
 </div>
