--- a/src/partials/interview.html
+++ b/src/partials/interview.html
@@ -7,7 +7,8 @@
 				"id": "{{ id }}",
 				"author": "{{ author }}",
 				"audioFilePath": "{{ audioFilePath }}",
-				"title": "{{ title }}"
+				"title": "{{ title }}",
+				"enableTranscript": "",
 			}'
         >
         </include>
