drop shadow and transparency

--- a/src/partials/interview_audio.html
+++ b/src/partials/interview_audio.html
@@ -22,7 +22,7 @@
 
         <div
             data-lang-key="{{ id ? id + '-text-1' : ''}}"
-            class="fixed bottom-4 left-1/2 z-50 hidden h-64 w-full min-w-80 -translate-x-1/2 transform-gpu overflow-y-auto rounded-sm bg-black px-[--padding-x] py-1 text-left font-crimson-text text-base tracking-wide text-gray-300 opacity-90 [scrollbar-color:theme(colors.gray.300)_transparent] [scrollbar-width:thin] peer-checked:block"
+            class="fixed bottom-4 left-1/2 z-50 hidden h-64 w-full min-w-80 -translate-x-1/2 transform-gpu overflow-y-auto whitespace-break-spaces rounded-sm bg-black/85 px-[--padding-x] py-1 text-left font-crimson-text text-base tracking-wide text-gray-300 shadow-sm shadow-gray-800 [scrollbar-color:theme(colors.gray.300)_transparent] [scrollbar-width:thin] peer-checked:block"
         >
             <!-- Need any just any empty content here to be considered for language switching -->
             &nbsp;
